# AutoClip-Flow

./: .env  .gitignore  Dockerfile  celerybeat-schedule.db  docker-compose.yml  dump.rdb  manage_services.sh  pyproject.toml  services.sh  tests-start.sh
alembic/: env.py
alembic/versions/: 0c7bc5fcebcb_task_foregin_key_fixed.py  2025_add_stopped_taskstatus.py  2025_add_usertask_task_id.py  4a233d112f35_task_title_added.py  57011aa9391b_task_id_duplicatin_removed.py  5e55a9be3e58_task_added.py  690bbaae233e_enum_editad.py  8254128f3d56_rename_platforms_to_platform.py  9a1b2c3d4e5f_add_facebook_fields_to_account.py  9add4d097b92_initial_migration.py  9c371e9699bf_enum_editad.py  a2b3c4d5e6f7_add_platforms_column_to_account.py  add_google_key_fields_to_user.py  b3c4d5e6f7a8_drop_platform_column_from_account.py  c3da6d967230_initial_migration.py  ec3f7bb80b74_task_foregin_key_fixed.py  ff84adbef8c3_task_foregin_key_fixed.py  ffebc698b29d_schudule_time_added.py  merge_add_google_key_heads.py
app/: backend_pre_start.py  crud.py  main.py  prestart.sh
app/alembic/: env.py
app/api/: deps.py  main.py
app/core/: config.py  db.py  security.py
app/models/: account_model.py  base.py  task_model.py  user_model.py
app/scripts/: start.sh
automation/: main.py
automation/config/: config.py
automation/enums/: platform.py
automation/manager/: cookie_manager.py  video_manager.py
automation/services/: facebook_service.py  google_drive_service.py  instagram_service.py  tiktok_service.py  youtube_service.py
automation/utils/: cookies_utils.py  file_utils.py  logging_utils.py
celery_worker/: celery_worker.py  task.py
static/css/: style.css
templates/: _nav.html  account_form.html  accounts.html  automation.html  dashboard.html  index.html  login.html  profile.html  reset-password.html  signup.html  users.html
(+37 files in other folders)
