[project]
name = "autoclip-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "bcrypt>=5.0.0",
    "celery>=5.5.3",
    "colorlog>=6.10.1",
    "email-validator>=2.3.0",
    "emails>=0.6",
    "fake-useragent>=2.2.0",
    "fastapi>=0.119.0",
    "flower>=2.0.1",
    "google-api-python-client>=2.185.0",
    "jinja2>=3.1.6",
    "oauth2client>=4.1.3",
    "passlib>=1.7.4",
    "psycopg[binary]>=3.2.10",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "seleniumbase>=4.42.6",
    "sentry-sdk>=2.42.0",
    "sqlmodel>=0.0.27",
    "tenacity>=9.1.2",
    "uvicorn>=0.37.0",
]
